--- a/hymnchtv/index.html
+++ b/hymnchtv/index.html
@@ -67,7 +67,7 @@
       <li>使用最新的 Android Pager Adapter 进行平滑滚动更顺畅</li>
       <li>直接输入诗歌编号以显示歌词；或从目录分类进入："诗歌类别"，"笔画索引"，"拼音索引"，和"英中对照"</li>
       <li>给予完整大本詩歌，補充本詩歌，新歌颂咏，及儿童诗歌歌，诗词搜索和选项进入</li>
-      <li>最大搜索为100项，显示匹配结果的4行完整诗词句</li>
+      <li>最大搜索为200项，显示匹配结果的4行完整诗词句</li>
       <li>长按[内容搜索]按钮即可将输入文字词组转换‘他’&#10145;‘祂’</li>
       <li>以最大允许的屏幕大小，同时显示诗歌乐谱和歌词文本</li>
       <li>手机横向模式时，媒体播放器界面自动隐藏；乐谱和歌词文本，显示自动加大150%，易于阅读</li>
@@ -85,9 +85,12 @@
       <li>媒体播放同步于用户新选诗歌编号，无需返回主页</li>
       <li>诗歌媒体播放以当前状态继续，直到歌曲结束；然后再同步用户新选诗歌编号</li>
       <li>可自我下载并复制媒体文件到预定义的目录（Download/hymnchtv）以用于播放</li>
+      <li>用户可选择主题支持：Theme.DARK 和 Theme.LIGHT, 包括 WebView</li>
+      <li>用户可选择的语言环境：简体中文和英文</li>
+      <li>在中文歌词显示中支持中文简体到繁体（香港繁体，台湾正体，或台湾常用词汇）转换</li>
+      <li>在线英文歌词显示</li>
       <li>用户可选的主界面包括预定或用户定义的墙纸，字体大小，字体颜色</li>
       <li>集成的图像编辑器具有功能，用户可以轻松更新墙纸</li>
-      <li>在线英文歌词显示</li>
       <li>添加对最近诗歌历史记录选择的支持</li>
       <li>自动检查版本更新，并通知用户任何新的更新以采取措施</li>   
       <li>请检阅 <a style="color:blue"; href='./faq.html'>诗歌本新应用程序功能</a></li>
@@ -107,7 +110,7 @@
 					<h2>书拉密女诗歌本应用程序主用户界面</h2>
 					<div class="media">
             <image src="./img/01.hymnchtv_main.png"/>
-						<p>用户诗歌选择可以使用诗歌编号，目录选项或简体中文内容搜索输入。长按[内容搜索]按钮即可将输入文字词组转换‘他’&#10145;‘祂’。
+						<p>诗歌输入可使用诗歌编号，目录选项或简体中文内容搜索。长按[内容搜索]按钮即可将输入文字词组转换‘他’&#10145;‘祂’。
 						<br/>诗歌编号：输入(附)号码后按大本，补充，新颂或儿诗。</p>
 					</div>					
 				</li>
