Update atalk/xmail privacy policy

--- a/atalk/privacypolicy.html
+++ b/atalk/privacypolicy.html
@@ -122,15 +122,16 @@
 	</div>
 
 	<span id='infoCo'></span>
-	<div class='grayText'>What personal information do we collect from the people use the app or visit our website?</div>
+	<div class='grayText'>Information Collection and Use</div>
 	
-  <div class='innerText'>aTalk is an XMPP client that connects to an XMPP server. aTalk will never upload data to the
-		 developer. The only exception to this rule is data collected after a crash. This data will be send via the 
-		 developer email account, but never without your explicit consent.<div>
-     
- <div class='innerText'>aTalk or its developers don’t have control over the data you send through the app. However the
-   following data might get uploaded to your XMPP provider:</div>  
-   <b><br/>Data uploaded to your XMPP provider</b>
+  <div class='innerText'>aTalk is an XMPP client that connects to your chosen XMPP server. The App does not collect, store,
+    or share any personal information unless explicitly provided by the user for the purpose of XMPP communication.
+    The App facilitates communication through XMPP (Extensible Messaging and Presence Protocol) and relies on the
+    user's chosen XMPP provider for data exchange.<div>
+
+   <b><br/>XMPP Communication</b>
+   <div class='innerText'>aTalk or its developers don’t have control over the data you send through the app. However
+     the following data might get uploaded to your XMPP provider via user explicit actions:</div>  
    <ul>
 			<li>Messages. This includes text messages, images and other files</li>
 			<li>Your avatar / profile picture</li>
@@ -146,25 +147,40 @@
 
 	<div class='innerText'><b>aTalk website access:<br/></b>
   <ul>
-			<li>aTalk website provides aTalk's features detailed descriptions, and online help on the use of aTalk app.<br/>
-  	  We do not collect information from visitors to our site; or any other personal details to help you with your
-  	   experience.</li>
+			<li>aTalk website provides aTalk's features detailed descriptions, and online help on the use of aTalk app.</li>
+ 			<li>We only provide articles and information. We never ask for personal or private information like names,
+			   email addresses, or credit card numbers.</li>
+      <li>The site does not use cookies for tracking purposes</li>		   
+      <li>The site uses SSL certificate for secure communications.</li>
  	</ul>
  	</div>
 
-	<div class='grayText'>When do we collect information?</div>
-	<div class='innerText'>We collect information from you when you provide and enter information on our site,
-	  or send via email.
-		<ul>
-			<li>Provide us with feedback on our products or services</li>
-		</ul>	
-	</div>
+	<div class='grayText'>Data Security</div>
+  <div class='innerText'>aTalk takes the security of your data seriously. The XMPP communication is encrypted, and the App
+    does not store or process messages on external servers.</div>
+  
+	<div class='grayText'>Permissions</div>
+  <div class='innerText'>The App requests specific permissions to function properly. These permissions include network
+    access for XMPP communication and push notifications, as well as device storage access for media sharing if
+    applicable. aTalk does not misuse these permissions and only uses them for the intended purpose of providing
+    the XMPP communication service.</div>
+
+	<div class='grayText'>Developer’s Data Retention and Deletion Policy</div>
+  <div class='innerText'>aTalk does not retain personal or sensitive user data on external servers. The App adheres to
+    a data retention and deletion policy that ensures user data is only stored for the duration necessary to provide
+    the XMPP communication service. Users have the ability to manage their data through the settings provided within
+    the App.</div>
+    <div class='innerText'>Note: aTalk does not have administration right on user chosen xmpp server. All user required
+      actions on the server must send their requests to the user chosen XMPP server administrator.</div>
+    
 
 	<span id='infoUs'></span>
 	<div class='grayText'>How do we use your information?</div>
+  <div class='innerText'>aTalk does not upload data to the developer. The only exception to this rule is data collected
+     after a crash. This data may send via the app to the developer email account, but only with your explicit consent.<div>  
+
 	<div class='innerText'>
-		We may use the information we received from you via email; or collect from you when you register, respond to a
-		survey or surf the website, or use certain other site features in the following ways:
+		We may use the information we received from you via email in the following ways:
 		<ul>
 			<li>To allow us to better service you in responding to your customer service requests.</li>
 			<li>The information is used strictly for the purpose of analysing and solving issues, that users are experiencing.</li>
@@ -172,27 +188,6 @@
 			<li>We will never use the information for marketing purpose or provide your information to third parties.</li>
 		</ul>	
 	</div>
-
-	<span id='infoPro'></span>
-	<div class='grayText'>How do we protect your information?</div>
-	<div class='innerText'>
-		<ul>
-      <li>We do not use vulnerability scanning and/or scanning to PCI standards.</li>
-			<li>We only provide articles and information. We never ask for personal or private information like names,
-			   email addresses, or credit card numbers.</li>
-      <li>We use regular Malware Scanning.</li>
-      <li>The site uses SSL certificate for secure communications.</li>
-		</ul>
-	</div>
-	
-	<span id='coUs'></span>
-	<div class='grayText'>Do we use 'cookies'?</div>
-	<div class='innerText'>We do not use cookies for tracking purposes</div>
-	<div class='innerText'>You can choose to have your computer warn you each time a cookie is being sent, or you
-	  can choose to turn off all cookies. You do this through your browser settings. Since browser is a little
-	  different, look at your browser's Help Menu to learn the correct way to modify your cookies.</div>
-	<div class='innerText'>If you turn cookies off, Some of the features that make your site experience more
-	  efficient may not function properly.</div> <span id='trDi'></span>
 
 	<div class='grayText'>Third-party disclosure</div>
 	<div class='innerText'>We do not sell, trade, or otherwise transfer to outside parties your Personally Identifiable
@@ -207,7 +202,7 @@
 	<div class='innerText'>Google's advertising requirements can be summed up by Google's Advertising Principles.
 	  They are put in place to provide a positive experience for users. See
 	  <a href="https://support.google.com/adwordspolicy/answer/1316548?hl=en">Google AdSense</a></div>
-	<div class='innerText'>We have not enabled Google AdSense on our site but we may do so in the future.</div>
+	<div class='innerText'>We do not enabled Google AdSense on our site.</div>
 	<span id='calOppa'></span>
 
 	<div class='blueText'>California Online Privacy Protection Act</div>
