--- a/xmail/privacypolicy.html
+++ b/xmail/privacypolicy.html
@@ -119,57 +119,46 @@
 		understanding of how we collect, use, protect or otherwise handle your personally Identifiable Information
 		in accordance with our website or app.
 	</div>
+
+
 	<span id='infoCo'></span>
+	<div class='grayText'>Information Collection and Use</div>
+	
+  <div class='innerText'>XryptoMail is an email client that works in conjunction with your chosen email service provider.
+    The App does not collect, store, or share any personal information unless explicitly provided by the user for the
+    purpose of email exchanges. The App facilitates communication through POP3, and IMAP Protocols and relies
+    on the user's chosen email service provider for data exchange.<div>
+    
+	<span id='infoCo'></span>
+  <div class='grayText'>What personal information do we collect from the people that visit our website or app?</div>
+    <ul>
+			<li>aTalk website provides XryptoMail's features detailed descriptions, and online help on the use of XryptoMail app.</li>
+ 			<li>We do not collect information from visitors of our site. We only provide articles and information.
+ 			  We never ask for personal or private information like names, email addresses, or credit card numbers.</li>
+      <li>The site does not use cookies for tracking purposes</li>		   
+      <li>The site uses SSL certificate for secure communications.</li>
+   	</ul>
+  </div>
 
-	<div class='grayText'>What personal information do we collect from the people that visit our blog, website or app?</div>
-	<div class='innerText'>We do not collect information from visitors of our site; or other personal details to
-	   help you with your experience.</div>
 
-	<div class='grayText'>When do we collect information?</div>
-	<div class='innerText'>We collect information from you when you provide and enter information on our site,
-	  or send via email.
-		<ul>
-			<li>Provide us with feedback on our products or services</li>
-		</ul>	
-	</div>
-	<span id='infoUs'></span>
+	<div class='grayText'>Data Security</div>
+  <div class='innerText'>XryptoMail takes the security of your data seriously. The App does not store or process
+    messages on external servers.</div>
+  
+	<div class='grayText'>Permissions</div>
+  <div class='innerText'>The App requests specific permissions to function properly. These permissions include network
+    access for email exhanges and push notifications, as well as device storage access if applicable. XryptoMail does
+    not misuse these permissions and only uses them for the intended purpose of providing the email client service.</div>
 
-	<div class='grayText'>How do we use your information?</div>
-	<div class='innerText'>
-		We may use the information we collect from you when you register, make
-		a purchase, sign up for our newsletter, respond to a survey or
-		marketing communication, surf the website, or use certain other site
-		features in the following ways:
-		<ul>
-			<li>To allow us to better service you in responding to your customer service requests.</li>
-			<li>We do not keep records of your name or email address, or any files containing those information.</li>
-			<li>The information is used strictly for the purpose of analyzing and solving issues that users are
-			   experiencing.</li>
-			<li>We will never use the information for marketing purpose or provide your information to third parties.</li>
-		</ul>	
-	</div>
-	<span id='infoPro'></span>
-
-	<div class='grayText'>How do we protect your information?</div>
-	<div class='innerText'>We do not use vulnerability scanning and/or scanning to PCI standards.</div>
-	<div class='innerText'>We only provide articles and information. We never ask for credit card numbers.</div>
-	<div class='innerText'>We use regular Malware Scanning.</div>
-
-	<div class='innerText'>We do not use an SSL certificate:
-		<ul>
-			<li>We only provide articles and information. We never ask for personal or private information like names,
-			   email addresses, or credit card numbers.</li>
-		</ul>
-	</div>
-	<span id='coUs'></span>
-
-	<div class='grayText'>Do we use 'cookies'?</div>
-	<div class='innerText'>We do not use cookies for tracking purposes</div>
-	<div class='innerText'>You can choose to have your computer warn you each time a cookie is being sent, or you
-	  can choose to turn off all cookies. You do this through your browser settings. Since browser is a little
-	  different, look at your browser's Help Menu to learn the correct way to modify your cookies.</div>
-	<div class='innerText'>If you turn cookies off, Some of the features that make your site experience more
-	  efficient may not function properly.</div> <span id='trDi'></span>
+	<div class='grayText'>Developer’s Data Retention and Deletion Policy</div>
+  <div class='innerText'>XryptoMail does not retain personal or sensitive user data on external servers. The App adheres
+    to a data retention and deletion policy that ensures user data is only stored for the duration necessary to provide
+    the XMPP communication service. Users have the ability to manage their data through the settings provided within
+    the App.</div> 
+    <div class='innerText'>Note: XryptoMail does not have administration right on user chosen email service provider
+      server. All user required actions on email server must send their requests to the user chosen email service
+      provider administrator.
+    </div> 
 
 	<div class='grayText'>Third-party disclosure</div>
 	<div class='innerText'>We do not sell, trade, or otherwise transfer to outside parties your Personally Identifiable
@@ -184,9 +173,9 @@
 	<div class='innerText'>Google's advertising requirements can be summed up by Google's Advertising Principles.
 	  They are put in place to provide a positive experience for users. See
 	  <a href="https://support.google.com/adwordspolicy/answer/1316548?hl=en">Google AdSense</a></div>
-	<div class='innerText'>We have not enabled Google AdSense on our site but we may do so in the future.</div>
-	<span id='calOppa'></span>
+	<div class='innerText'>We do not enabled Google AdSense on our site.</div>
 
+	<span id='calOppa'></span>
 	<div class='blueText'>California Online Privacy Protection Act</div>
 	<div class='innerText'>CalOPPA is the first state law in the
 		nation to require commercial websites and online services to post a
