--- a/atalk/index.html
+++ b/atalk/index.html
@@ -93,6 +93,7 @@
       <li>XEP-0124: Bidirectional-streams Over Synchronous HTTP (BOSH) with Proxy support</li>
       <li>XEP-0178: Use of SASL EXTERNAL with TLS Certificates for client authentication</li>
       <li>XEP-0184: Message Delivery Receipts with user enable/disable option</li>
+      <li>XEP-0191: Blocking command</li>
       <li>XEP-0251: Jingle Session Transfer: Support both Unattended and Attended call transfer</li>
       <li>XEP-0313: Message Archive Management</li>
       <li>XEP-0391: Jingle Encrypted Transports for OMEMO encrypted media file sharing</li>
